--- a/app/scss/globals/_cards.scss
+++ b/app/scss/globals/_cards.scss
@@ -23,7 +23,7 @@
     height: u.rem(200);
     padding: u.rem(20);
     border-radius: u.rem(10);
-    background-image: url(/images/bg-card-front.png);
+    background-image: url(//images/bg-card-front.png);
     background-repeat: no-repeat;
     background-size: auto;
 
@@ -70,7 +70,7 @@
     height: u.rem(200);
     padding: u.rem(20);
     border-radius: u.rem(10);
-    background-image: url(/images/bg-card-back.png);
+    background-image: url(//images/bg-card-back.png);
     background-repeat: no-repeat;
     background-size: auto;
 
