--- a/app/scss/globals/_buttons.scss
+++ b/app/scss/globals/_buttons.scss
@@ -2,8 +2,8 @@
 .btn {
     background-color: var(--darkViolet);
     width: 104%;
-    height: u.rem(70);
-    font-size: u.rem(24);
+    height: 150%;
+    font-size: u.rem(10);
     margin-top: u.rem(20);
     color: var(--white);
     border-radius: u.rem(10);
@@ -14,10 +14,11 @@
 input[type="submit"] {
     background-color: var(--darkViolet);
     width: 104%;
-    height: u.rem(70);
-    font-size: u.rem(24);
+    height: u.em(60);
+    font-size: u.em(20);
     margin-top: u.rem(20);
     color: var(--white);
     border-radius: u.rem(10);
+    border: none;
     padding: u.rem(10);
 }
