--- a/app/scss/globals/_form.scss
+++ b/app/scss/globals/_form.scss
@@ -4,22 +4,21 @@
     width: 40%;
     //display: none;
 
-    @include u.breakpoints-down(mobile-potrait) {
+    @include u.breakpoints-down(small) {
         width: 80%;
     }
-    
 
     &__label {
         color: var(--darkViolet);
         width: 100%;
         text-transform: uppercase;
         font-size: medium;
-        letter-spacing: u.rem(2);
+        letter-spacing: u.em(1);
     }
 
     &__input {
         width: 100%;
-        height: u.rem(50); 
+        height: u.em(50); 
         margin-top: u.rem(10); 
         border: u.rem(2) solid var(--lightGrayViolet);
         border-radius: u.rem(10);
@@ -30,7 +29,7 @@
         width: 50%;
     }
 
-    &__cvc {
+    &__cvv {
         width: 50%;
     }
 
@@ -45,7 +44,7 @@
 
 input::placeholder {
     color: var(--darkGrayViolet);
-    font-size: large;
+    font-size: u.em(20);
     letter-spacing: u.rem(1);
 }
 
@@ -53,5 +52,5 @@ form {
     display: flex;
     flex-direction: column;
     gap: u.rem(10);
-    font-size: x-large;
+    font-size: u.em(10);
 }
