--- a/app/scss/globals/_cards.scss
+++ b/app/scss/globals/_cards.scss
@@ -25,7 +25,7 @@
     height: 40%;
     padding: u.rem(20);
     border-radius: u.rem(10);
-    background-image: url("/images/bg-card-front.png");
+    background-image: url("../img/bg-card-front.png");
     background-repeat: no-repeat;
     background-size: cover;
 
@@ -69,7 +69,7 @@
     height: 40%;
     padding: u.rem(20);
     border-radius: u.rem(10);
-    background-image: url("/images/bg-card-back.png");
+    background-image: url("../img/bg-card-back.png");
     background-repeat: no-repeat;
     background-size: cover;
 
