--- a/app/scss/layout/_grid.scss
+++ b/app/scss/layout/_grid.scss
@@ -29,14 +29,14 @@
     &__aside {
         grid-column: 1/2;
         grid-row: 1/2;
-        background-image: url("/images/bg-main-desktop.png");
+        background-image: url("../img/bg-main-desktop.png");
         background-repeat: no-repeat;
         background-size: cover;
 
         @include u.breakpoints-down(small) {
             grid-row: 1/2;
             grid-column: 1/2;
-            background-image: url("/images/bg-main-mobile.png");
+            background-image: url("../img/bg-main-mobile.png");
         }
 
     }
