--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,265 @@
-@import"https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap";*{margin:0;padding:0}html{box-sizing:border-box}body{min-height:100vh}.font-main{font-family:"Space Grotesk",sans-serif;font-optical-sizing:auto;font-weight:500;font-style:normal}h2{font-size:1rem;color:var(--darkViolet)}:root{--red: hsl(0, 100%, 66%);--blue: hsl(249, 99%, 64%);--purple: hsl(278, 94%, 30%);--white: hsl(0, 0%, 100%);--lightGrayViolet: hsl(270, 3%, 87%);--darkGrayViolet: hsl(279, 6%, 55%);--darkViolet: hsl(278, 68%, 11%)}.btn{background-color:var(--darkViolet);width:104%;height:150%;font-size:0.625rem;margin-top:1.25rem;color:var(--white);border-radius:0.625rem;padding:0.625rem}input[type=submit]{background-color:var(--darkViolet);width:104%;height:3.75em;font-size:1.25em;margin-top:1.25rem;color:var(--white);border-radius:0.625rem;border:none;padding:0.625rem}.cards{position:absolute;top:20%;left:10%;width:25rem;height:23.125rem}@media screen and (max-width: 75em){.cards{top:16%;left:5%}}.card-front{display:flex;flex-direction:column;position:relative;top:0;color:var(--white);width:80%;height:40%;padding:1.25rem;border-radius:0.625rem;background-image:url("/images/bg-card-front.png");background-repeat:no-repeat;background-size:cover}@media screen and (max-width: 75em){.card-front{z-index:2}}.card-front__logo{margin-bottom:2.1875em}.card-front__number{margin-bottom:0.9375em;font-size:1.375em;text-align:justify;letter-spacing:0.125em;font-weight:normal}.card-front__final{display:flex;flex-direction:row;justify-content:space-between;letter-spacing:0.125em}.card-front__name{text-transform:uppercase}.card-back{display:flex;flex-direction:column;justify-content:center;position:relative;left:3.125rem;bottom:-1.25rem;color:var(--white);width:80%;height:40%;padding:1.25rem;border-radius:0.625rem;background-image:url("/images/bg-card-back.png");background-repeat:no-repeat;background-size:cover}@media screen and (max-width: 75em){.card-back{z-index:1;top:-380px}}.card-back__cvv{display:flex;flex-direction:row-reverse;width:100%}.card-back__text{margin-right:5%}.form{width:40%}@media screen and (max-width: 75em){.form{width:80%}}.form__label{color:var(--darkViolet);width:100%;text-transform:uppercase;font-size:medium;letter-spacing:0.0625em}.form__input{width:100%;height:3.125em;margin-top:0.625rem;border:0.125rem solid var(--lightGrayViolet);border-radius:0.625rem;padding-left:0.625rem}.form__expiry{width:50%}.form__cvv{width:50%}.form__expiry .form__input{width:30%;margin-right:0.9375rem}input::-moz-placeholder{color:var(--darkGrayViolet);font-size:1.25em;letter-spacing:0.0625rem}input::placeholder{color:var(--darkGrayViolet);font-size:1.25em;letter-spacing:0.0625rem}form{display:flex;flex-direction:column;gap:0.625rem;font-size:0.625em}.success{display:flex;flex-direction:column;align-items:center;gap:1.25rem;width:40%;display:none}.success__title h2{text-transform:uppercase;font-size:3rem;letter-spacing:0.3125rem;color:var(--darkViolet)}.success__description p{font-size:1.5rem;letter-spacing:0.0625rem;color:var(--darkGrayViolet)}.success__continue{width:100%}.grid{display:grid;min-height:100vh;grid-template-rows:auto;grid-template-columns:30% 70%}@media screen and (max-width: 75em){.grid{grid-template-rows:30% 70%;grid-template-columns:auto}}.grid__main{grid-column:2/3;grid-row:1/2;display:flex;flex-direction:column;align-items:center;justify-content:center}@media screen and (max-width: 75em){.grid__main{grid-row:2/3;grid-column:1/2}}.grid__aside{grid-column:1/2;grid-row:1/2;background-image:url("/images/bg-main-desktop.png");background-repeat:no-repeat;background-size:cover}@media screen and (max-width: 75em){.grid__aside{grid-row:1/2;grid-column:1/2;background-image:url("/images/bg-main-mobile.png")}}.flex-row{display:flex;flex-direction:row;align-items:flex-end}/*# sourceMappingURL=styles.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  box-sizing: border-box;
+}
+
+body {
+  min-height: 100vh;
+}
+
+.font-main {
+  font-family: "Space Grotesk", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+}
+
+h2 {
+  font-size: 1rem;
+  color: var(--darkViolet);
+}
+
+:root {
+  --red: hsl(0, 100%, 66%);
+  --blue: hsl(249, 99%, 64%);
+  --purple: hsl(278, 94%, 30%);
+  --white: hsl(0, 0%, 100%);
+  --lightGrayViolet: hsl(270, 3%, 87%);
+  --darkGrayViolet: hsl(279, 6%, 55%);
+  --darkViolet: hsl(278, 68%, 11%);
+}
+
+.btn {
+  background-color: var(--darkViolet);
+  width: 104%;
+  height: 150%;
+  font-size: 0.625rem;
+  margin-top: 1.25rem;
+  color: var(--white);
+  border-radius: 0.625rem;
+  padding: 0.625rem;
+}
+
+input[type=submit] {
+  background-color: var(--darkViolet);
+  width: 104%;
+  height: 3.75em;
+  font-size: 1.25em;
+  margin-top: 1.25rem;
+  color: var(--white);
+  border-radius: 0.625rem;
+  border: none;
+  padding: 0.625rem;
+}
+
+.cards {
+  position: absolute;
+  top: 20%;
+  left: 10%;
+  width: 25rem;
+  height: 23.125rem;
+}
+@media screen and (max-width: 75em) {
+  .cards {
+    top: 16%;
+    left: 5%;
+  }
+}
+
+.card-front {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  top: 0;
+  color: var(--white);
+  width: 80%;
+  height: 40%;
+  padding: 1.25rem;
+  border-radius: 0.625rem;
+  background-image: url("../img/bg-card-front.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+@media screen and (max-width: 75em) {
+  .card-front {
+    z-index: 2;
+  }
+}
+.card-front__logo {
+  margin-bottom: 2.1875em;
+}
+.card-front__number {
+  margin-bottom: 0.9375em;
+  font-size: 1.375em;
+  text-align: justify;
+  letter-spacing: 0.125em;
+  font-weight: normal;
+}
+.card-front__final {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  letter-spacing: 0.125em;
+}
+.card-front__name {
+  text-transform: uppercase;
+}
+
+.card-back {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  left: 3.125rem;
+  bottom: -1.25rem;
+  color: var(--white);
+  width: 80%;
+  height: 40%;
+  padding: 1.25rem;
+  border-radius: 0.625rem;
+  background-image: url("../img/bg-card-back.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+@media screen and (max-width: 75em) {
+  .card-back {
+    z-index: 1;
+    top: -380px;
+  }
+}
+.card-back__cvv {
+  display: flex;
+  flex-direction: row-reverse;
+  width: 100%;
+}
+.card-back__text {
+  margin-right: 5%;
+}
+
+.form {
+  width: 40%;
+}
+@media screen and (max-width: 75em) {
+  .form {
+    width: 80%;
+  }
+}
+.form__label {
+  color: var(--darkViolet);
+  width: 100%;
+  text-transform: uppercase;
+  font-size: medium;
+  letter-spacing: 0.0625em;
+}
+.form__input {
+  width: 100%;
+  height: 3.125em;
+  margin-top: 0.625rem;
+  border: 0.125rem solid var(--lightGrayViolet);
+  border-radius: 0.625rem;
+  padding-left: 0.625rem;
+}
+.form__expiry {
+  width: 50%;
+}
+.form__cvv {
+  width: 50%;
+}
+.form__expiry .form__input {
+  width: 30%;
+  margin-right: 0.9375rem;
+}
+
+input::-moz-placeholder {
+  color: var(--darkGrayViolet);
+  font-size: 1.25em;
+  letter-spacing: 0.0625rem;
+}
+
+input::placeholder {
+  color: var(--darkGrayViolet);
+  font-size: 1.25em;
+  letter-spacing: 0.0625rem;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 0.625rem;
+  font-size: 0.625em;
+}
+
+.success {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.25rem;
+  width: 40%;
+  display: none;
+}
+.success__title h2 {
+  text-transform: uppercase;
+  font-size: 3rem;
+  letter-spacing: 0.3125rem;
+  color: var(--darkViolet);
+}
+.success__description p {
+  font-size: 1.5rem;
+  letter-spacing: 0.0625rem;
+  color: var(--darkGrayViolet);
+}
+.success__continue {
+  width: 100%;
+}
+
+.grid {
+  display: grid;
+  min-height: 100vh;
+  grid-template-rows: auto;
+  grid-template-columns: 30% 70%;
+}
+@media screen and (max-width: 75em) {
+  .grid {
+    grid-template-rows: 30% 70%;
+    grid-template-columns: auto;
+  }
+}
+.grid__main {
+  grid-column: 2/3;
+  grid-row: 1/2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+@media screen and (max-width: 75em) {
+  .grid__main {
+    grid-row: 2/3;
+    grid-column: 1/2;
+  }
+}
+.grid__aside {
+  grid-column: 1/2;
+  grid-row: 1/2;
+  background-image: url("../img/bg-main-desktop.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+@media screen and (max-width: 75em) {
+  .grid__aside {
+    grid-row: 1/2;
+    grid-column: 1/2;
+    background-image: url("../img/bg-main-mobile.png");
+  }
+}
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+}/*# sourceMappingURL=styles.css.map */
