frontend touch ups

--- a/app/scss/globals/_form.scss
+++ b/app/scss/globals/_form.scss
@@ -5,7 +5,8 @@
     //display: none;
 
     @include u.breakpoints-down(small) {
-        width: 80%;
+        width: 85%;
+        margin-top: u.rem(130);
     }
 
     &__label {
