--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@ html {
 
 body {
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 .font-main {
@@ -66,8 +67,9 @@ input[type=submit] {
 }
 @media screen and (max-width: 75em) {
   .cards {
-    top: 16%;
-    left: 5%;
+    top: 0px;
+    left: 1.5625rem;
+    width: 20rem;
   }
 }
 
@@ -87,11 +89,28 @@ input[type=submit] {
 }
 @media screen and (max-width: 75em) {
   .card-front {
+    position: absolute;
+    top: 10.25rem;
     z-index: 2;
+    width: 14.375rem;
+    height: 6.875rem;
   }
 }
 .card-front__logo {
   margin-bottom: 2.1875em;
+}
+@media screen and (max-width: 75em) {
+  .card-front__logo {
+    width: 35%;
+    height: 40%;
+    margin-bottom: 1.5625em;
+  }
+}
+@media screen and (max-width: 75em) {
+  .card-front__logo img {
+    width: 100%;
+    height: 100%;
+  }
 }
 .card-front__number {
   margin-bottom: 0.9375em;
@@ -100,11 +119,21 @@ input[type=submit] {
   letter-spacing: 0.125em;
   font-weight: normal;
 }
+@media screen and (max-width: 75em) {
+  .card-front__number {
+    font-size: 1.0625em;
+  }
+}
 .card-front__final {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   letter-spacing: 0.125em;
+}
+@media screen and (max-width: 75em) {
+  .card-front__final {
+    font-size: 0.75em;
+  }
 }
 .card-front__name {
   text-transform: uppercase;
@@ -128,14 +157,22 @@ input[type=submit] {
 }
 @media screen and (max-width: 75em) {
   .card-back {
+    position: absolute;
+    top: 0;
     z-index: 1;
-    top: -380px;
+    width: 14.375rem;
+    height: 6.875rem;
   }
 }
 .card-back__cvv {
   display: flex;
   flex-direction: row-reverse;
   width: 100%;
+}
+@media screen and (max-width: 75em) {
+  .card-back__cvv {
+    font-size: 0.75em;
+  }
 }
 .card-back__text {
   margin-right: 5%;
@@ -146,7 +183,8 @@ input[type=submit] {
 }
 @media screen and (max-width: 75em) {
   .form {
-    width: 80%;
+    width: 85%;
+    margin-top: 8.125rem;
   }
 }
 .form__label {
@@ -226,7 +264,7 @@ form {
 @media screen and (max-width: 75em) {
   .grid {
     grid-template-rows: 30% 70%;
-    grid-template-columns: auto;
+    grid-template-columns: 100%;
   }
 }
 .grid__main {
@@ -241,6 +279,7 @@ form {
   .grid__main {
     grid-row: 2/3;
     grid-column: 1/2;
+    justify-content: flex-start;
   }
 }
 .grid__aside {
