--- a/app/scss/globals/_cards.scss
+++ b/app/scss/globals/_cards.scss
@@ -8,8 +8,9 @@
     height: u.rem(370);
     
     @include u.breakpoints-down(small) {
-        top: 16%;
-        left: 5%;
+        top: 0px;
+        left: u.rem(25);
+        width: u.rem(320);
     }
 
 }
@@ -30,11 +31,32 @@
     background-size: cover;
 
     @include u.breakpoints-down(small) {
+        position: absolute;
+        top: u.rem(164);
         z-index: 2;
+        width: u.rem(230);
+        height: u.rem(110);
     }
 
     &__logo {
         margin-bottom: u.em(35);
+
+        @include u.breakpoints-down(small) {
+            width: 35%;
+            height: 40%;
+            margin-bottom: u.em(25);
+
+        }
+    }
+
+    &__logo img {
+
+        @include u.breakpoints-down(small) {
+            width: 100%;
+            height: 100%;
+
+        }
+        
     }
 
     &__number {
@@ -43,6 +65,10 @@
         text-align: justify;
         letter-spacing: u.em(2);
         font-weight: normal;
+
+        @include u.breakpoints-down(small) {
+            font-size: u.em(17);      
+        }
     }
 
     &__final {
@@ -50,6 +76,11 @@
         flex-direction: row;
         justify-content: space-between;
         letter-spacing: u.em(2);
+
+        @include u.breakpoints-down(small) {
+            font-size: u.em(12);      
+        }
+        
     }
 
     &__name {
@@ -74,14 +105,22 @@
     background-size: cover;
 
     @include u.breakpoints-down(small) {
+        position: absolute;
+        top: 0;  
         z-index: 1;
-        top: -380px;
+        width: u.rem(230);
+        height: u.rem(110);
+
     }
     
     &__cvv {
         display: flex;
         flex-direction: row-reverse;
         width: 100%;
+        
+        @include u.breakpoints-down(small) {
+            font-size: u.em(12);
+        }
     }
 
     &__text {
